# rust-ffi-boilerplate

./: .gitignore  Cargo.toml  build.rs  build.sh  readme.md
misc/: Package.swift
src/: lib.rs  lib.udl
