[package]
name = "rust_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
uniffi = "0.21.0"
uniffi_macros = "0.21.0"

vocab-lib = { path="../vocab-lib/" }

[build-dependencies]
uniffi_build = {version="0.21.0", features = ["builtin-bindgen"] }
